// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PopupSyncError > Emits close > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncError > Emits close > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncError > Emits close > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncError > Emits close > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncError > Emits close > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncError > Emits close > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncError > Emits close > allCalls 1`] = `[]`;

exports[`PopupSyncError > Emits close > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncError > Emits close > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncError > Emits close > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncError > Emits close > openedPopup 1`] = `undefined`;

exports[`PopupSyncError > Emits close > selectedTheme 1`] = `"System"`;

exports[`PopupSyncError > Emits close > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncError > Emits close > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncError > Ignores > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncError > Ignores > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncError > Ignores > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncError > Ignores > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncError > Ignores > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncError > Ignores > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncError > Ignores > allCalls 1`] = `
[
  [
    "invoke",
    {
      "calledWith": {
        "username": "",
      },
      "name": "delete_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": false,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
]
`;

exports[`PopupSyncError > Ignores > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncError > Ignores > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncError > Ignores > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncError > Ignores > openedPopup 1`] = `undefined`;

exports[`PopupSyncError > Ignores > selectedTheme 1`] = `"System"`;

exports[`PopupSyncError > Ignores > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncError > Ignores > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncError > Mounts > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncError > Mounts > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncError > Mounts > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncError > Mounts > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncError > Mounts > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncError > Mounts > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncError > Mounts > allCalls 1`] = `[]`;

exports[`PopupSyncError > Mounts > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncError > Mounts > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncError > Mounts > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncError > Mounts > openedPopup 1`] = `undefined`;

exports[`PopupSyncError > Mounts > selectedTheme 1`] = `"System"`;

exports[`PopupSyncError > Mounts > syncState 1`] = `
{
  "appError": AppError {
    "code": 11,
    "display": undefined,
    "message": "I am a sync error",
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncError > Mounts > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncError > No try again button when no retry function > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncError > No try again button when no retry function > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncError > No try again button when no retry function > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncError > No try again button when no retry function > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncError > No try again button when no retry function > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncError > No try again button when no retry function > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncError > No try again button when no retry function > allCalls 1`] = `[]`;

exports[`PopupSyncError > No try again button when no retry function > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncError > No try again button when no retry function > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncError > No try again button when no retry function > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncError > No try again button when no retry function > openedPopup 1`] = `undefined`;

exports[`PopupSyncError > No try again button when no retry function > selectedTheme 1`] = `"System"`;

exports[`PopupSyncError > No try again button when no retry function > syncState 1`] = `
{
  "appError": AppError {
    "code": 11,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncError > No try again button when no retry function > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncError > Retries > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncError > Retries > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncError > Retries > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncError > Retries > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncError > Retries > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncError > Retries > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncError > Retries > allCalls 1`] = `[]`;

exports[`PopupSyncError > Retries > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncError > Retries > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncError > Retries > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncError > Retries > openedPopup 1`] = `undefined`;

exports[`PopupSyncError > Retries > selectedTheme 1`] = `"System"`;

exports[`PopupSyncError > Retries > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncError > Retries > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupSyncError > Shows default error message when none provided > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupSyncError > Shows default error message when none provided > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupSyncError > Shows default error message when none provided > Storage.get('THEME') 1`] = `null`;

exports[`PopupSyncError > Shows default error message when none provided > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupSyncError > Shows default error message when none provided > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupSyncError > Shows default error message when none provided > Storage.get('USERNAME') 1`] = `null`;

exports[`PopupSyncError > Shows default error message when none provided > allCalls 1`] = `[]`;

exports[`PopupSyncError > Shows default error message when none provided > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupSyncError > Shows default error message when none provided > mockDb 1`] = `
{
  "deletedNoteIds": Set {},
  "encryptedNotes": [
    {
      "content": "content",
      "id": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
      "timestamp": 958201892455,
    },
    {
      "content": "content",
      "id": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
      "timestamp": 811831863971,
    },
    {
      "content": "content",
      "id": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
      "timestamp": 739056902017,
    },
    {
      "content": "content",
      "id": "6b24cde1-6118-4277-9791-8eab3c71cabb",
      "timestamp": 157836992432,
    },
    {
      "content": "content",
      "id": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
      "timestamp": 1066734006578,
    },
    {
      "content": "content",
      "id": "6fb3ce26-82e0-408f-84bf-bd8cd64c35b2",
      "timestamp": 1642640862249,
    },
    {
      "content": "content",
      "id": "81648517-86ff-4ed9-8bf7-941c32dd0fad",
      "timestamp": 242282290063,
    },
    {
      "content": "content",
      "id": "9a2f52b3-69ac-4158-a9f7-b79ba9dbafd3",
      "timestamp": 550235579146,
    },
    {
      "content": "content",
      "id": "b9754a63-843c-4f59-9aea-9a374aa1603d",
      "timestamp": 1533441892487,
    },
    {
      "content": "content",
      "id": "7a7bccda-3fac-4465-b9c9-8f67dc1b5bdf",
      "timestamp": 1650008403223,
    },
  ],
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupSyncError > Shows default error message when none provided > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupSyncError > Shows default error message when none provided > openedPopup 1`] = `undefined`;

exports[`PopupSyncError > Shows default error message when none provided > selectedTheme 1`] = `"System"`;

exports[`PopupSyncError > Shows default error message when none provided > syncState 1`] = `
{
  "appError": AppError {
    "code": 11,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": UnsyncedNotesManager {
    "deleted": Set {},
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`PopupSyncError > Shows default error message when none provided > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
